# Text_To_SQL_Guardrails

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile.app  Dockerfile.ui  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  pipeline.py
app/api/: deps.py  main.py  models.py
app/api/routes/: query.py
app/execution/: executor.py
app/generation/: prompts.py  sql_generator.py  structured_output.py
app/guardrails/: sql_guardrails.py
app/schema/: introspection.py
app/validation/: back_translation.py  multi_query.py
db/: init.sql  seed.py
eval/: golden_dataset.json  run_evals.py
eval/results/: latest_results.md
tests/: test_back_translation.py  test_guardrails.py  test_pipeline.py
ui/: streamlit_app.py
