[project]
name = "text-to-sql-guardrails"
version = "0.1.0"
description = "Production-grade Text-to-SQL with guardrails and hallucination detection"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "instructor>=1.7.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlparse>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
    "structlog>=24.4.0",
    "faker>=33.0.0",
    "sentence-transformers>=3.3.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "torch>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
